# nanowire-detection

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: WALKTHROUGH.md
experimental_sem/: 13.tif  22.tif  23.tif  2_2.tif  4.tif  9.tif
grid_pipeline/: README.md  __init__.py  config.py  detect.py  draw.py  l_markers.py  lattice.py  pipeline.py  run_experimental_batch.sh
nanowire_ml/: README.md  __init__.py  coordinate_candidates.py  crops.py  dimension_analysis.py  dimension_visualize.py  evaluate_classifier.py  fused_nanowire_pipeline.py  generate_dataset.py  generate_high_contrast_dataset.py  predict_real_components.py  segmentation_baseline.py  topology.py  train_classifier.py  visualize_alignment_steps.py
tests/: conftest.py  test_blob_utils.py  test_grid_ransac.py  test_l_markers.py  test_lattice.py  test_sem_preprocess.py
utils/: __init__.py  blob_utils.py  grid_ransac.py  sem_preprocess.py
