[project]
name = "nanowire-detection"
version = "0.1.0"
description = "Detect suitable nanowire candidates in SEM images and tag each with its physical (um) grid coordinate."
readme = "README.md"
# 3.10+ is required by runtime `X | None` annotations in modules that do not use
# `from __future__ import annotations`.
requires-python = ">=3.10"

# Core dependencies. The grid + nanowire (CNN-disabled) pipelines need only
# these. The headless OpenCV build is the default so installs work on servers,
# CI, and machines without a display; swap to `opencv-python` if you need GUI
# windows (cv2.imshow).
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
# The optional "second-opinion" CNN. torch is heavy and only needed to train or
# run the model; the rest of the pipeline imports it lazily.
cnn = ["torch>=2.0"]
# Test / development tooling.
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils", "grid_pipeline", "nanowire_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

# The optional CNN only needs CPU inference, so pull torch from PyTorch's CPU
# wheel index. This keeps the lock/install small and reproducible and avoids the
# large CUDA driver packages (the CPU build runs fine on CI and on any machine).
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
